--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "expo": "~46.0.13",
-    "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -21,6 +20,10 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "~18.0.14",
+    "@types/react-native": "~0.69.1"
   },
   "private": true
 }
