reeady for lesson

--- a/app.json
+++ b/app.json
@@ -17,6 +17,15 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "plugins": [
+      [
+        "@stripe/stripe-react-native",
+        {
+          "merchantIdentifier": "",
+          "enableGooglePay": false
+        }
+      ]
+    ],
     "ios": {
       "supportsTablet": true
     },
